...
            override fun onResponse(
                call: Call,
                response: Response,
            ) {
                val body = response.body?.string()
                Log.w(TAG, "OkHttp response: ${response.code}: ${response.message}, $body")
                setResponse("Network Request Succeeded")
                response.close()
            }
        }
    client.newCall(request).enqueue(callback)
}

...
        verticalArrangement = Arrangement.Center,
        horizontalAlignment = Alignment.CenterHorizontally,
        modifier = Modifier.fillMaxWidth(),
    ) {
        Button(modifier = modifier, onClick = { onSendNetworkRequest { res -> networkRequestStatus.value = res } }) {
            Text(
                text = "Make a Network Request",
            )
        }
        Text(
            text = networkRequestStatus.value,
        )
    }
...
