...
            modifier = Modifier.fillMaxWidth(),
        ) {
            Text(text = "enable slow render")
            Switch(
                checked = enabled,
                onCheckedChange = setEnabled,
                modifier = Modifier.testTag("slow_render_switch"),
            )
        }
        if (enabled) {
            ExpensiveView()
        }
    }
}

private fun timeConsumingCalculation(delay: Duration): String {
    Log.d(TAG, "starting time consuming calculation")
    Thread.sleep(delay.toLong(DurationUnit.MILLISECONDS))
    return "slow text: ${delay.toDouble(DurationUnit.SECONDS)} seconds"
}

@Preview(showBackground = true)
@Composable
fun ViewInstrumentationPlaygroundPreview() {
    HoneycombOpenTelemetryAndroidTheme {
...
